refactor: change names of liquibase scripts, change error handling, other fixes