@@ -1,10 +1,13 @@
 package su.aleksokol3.employeeservice.exception;
 
 import lombok.RequiredArgsConstructor;
-import org.springframework.context.MessageSource;
 import org.springframework.context.MessageSourceResolvable;
 import org.springframework.data.mapping.PropertyReferenceException;
-import org.springframework.http.*;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.HttpStatusCode;
+import org.springframework.http.ProblemDetail;
+import org.springframework.http.ResponseEntity;
 import org.springframework.validation.FieldError;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
@@ -14,7 +17,9 @@ import org.springframework.web.method.annotation.HandlerMethodValidationExceptio
 import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler;
 
 import java.time.Instant;
-import java.util.*;
+import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 /**
@@ -24,18 +29,16 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class RestControllerExceptionHandler extends ResponseEntityExceptionHandler {
 
-    private final MessageSource messageSource;
-
     @Override
     protected ResponseEntity<Object> handleMethodArgumentNotValid(
             MethodArgumentNotValidException ex, HttpHeaders headers, HttpStatusCode status, WebRequest request) {
         Map<String, Object> body = new LinkedHashMap<>();
         body.put("timestamp", Instant.now());
-        List<String> errors = ex.getFieldErrors()
+        Map<String, List<String>> errors = ex.getFieldErrors()
                 .stream()
-                .sorted(Comparator.comparing(FieldError::getField))
-                .map(field -> field.getField() + ": " + field.getDefaultMessage())
-                .collect(Collectors.toList());
+                .collect(
+                        Collectors.groupingBy(FieldError::getField,
+                        Collectors.mapping(FieldError::getDefaultMessage, Collectors.toList())));
         body.put("errors", errors);
         ProblemDetail problemDetail = ProblemDetail.forStatus(status);
         problemDetail.setProperties(body);
@@ -50,7 +53,7 @@ public class RestControllerExceptionHandler extends ResponseEntityExceptionHandl
         List<String> errors = ex.getAllErrors()
                 .stream()
                 .map(MessageSourceResolvable::getDefaultMessage)
-                .collect(Collectors.toList());
+                .toList();
         body.put("errors", errors);
         ProblemDetail problemDetail = ProblemDetail.forStatus(status);
         problemDetail.setProperties(body);
@@ -74,17 +77,12 @@ public class RestControllerExceptionHandler extends ResponseEntityExceptionHandl
     /**
      * Customize the handling of {@link NotFoundException}
      * @param ex the exception to handle
-     * @param req the current request
      * @return a {@link ResponseEntity} for the response to use
      */
     @ExceptionHandler(NotFoundException.class)
-    public ResponseEntity<ProblemDetail> handleNotFoundException(NotFoundException ex, WebRequest req) {
+    public ResponseEntity<ProblemDetail> handleNotFoundException(NotFoundException ex) {
         Map<String, Object> body = new LinkedHashMap<>();
         body.put("timestamp", Instant.now());
-        String entityNameLocalized = messageSource.getMessage(ex.getEntityName(), new Object[0], req.getLocale());
-      //  body.put(ex.getEntityName(), ex.getErrorMessageCode());
-//        body.put("error", messageSource.getMessage(
-//                  ex.getErrorMessageCode(), new Object[]{entityNameLocalized, ex.getEntityId()}, req.getLocale()));
         body.put("error", ex.getErrorMessageCode());
         body.put("description", "ID %s of %s is not found".formatted(ex.getEntityId(), ex.getEntityName()));
         ProblemDetail problemDetail = ProblemDetail.forStatus(HttpStatus.NOT_FOUND.value());
